@@ -3,11 +3,12 @@
   * Solve a ResourceWarning when compiling.
   * Drop support for Python 2.4, 2.5 and 3.1. If you need
     compatibility with those versions, you can keep using old
-    releases of this bindings.
+    releases of these bindings.
   * Drop support for Berkeley DB 4.3, 4.4, 4.5, 4.6. If you need
     compatibility with those versions, you can keep using old
-    releases of this bindings.
+    releases of these bindings.
   * From now, on our support reference is Red Had Enterprise Linux 6.
+  * Drop module attribute "cvsid".
 
 6.0.1:
   * Clarification of license. Thanks to
